# rules_py

./: WORKSPACE
.github/workflows/: ci.bazelrc  ci.yaml  release.yml
tools/release/: BUILD.bazel  release.bzl
