load(":release.bzl", "multi_arch_release")

[
    platform(
        name = "{}_{}".format(os, cpu),
        constraint_values = [
            "@platforms//os:" + os,
            "@platforms//cpu:" + cpu,
        ],
    )
    for os in [
        "linux",
        "macos",
    ]
    for cpu in [
        "aarch64",
        "x86_64",
    ]
]

LINUX_ARTIFACTS = multi_arch_release(
    name = "linux",
    bins = [
        "venv",
        "unpack",
    ],
    os = "linux",
)

MACOS_ARTIFACTS = multi_arch_release(
    name = "macos",
    bins = [
        "venv",
        "unpack",
    ],
    os = "macos",
)

sh_binary(
    name = "copy_release_artifacts",
    srcs = ["copy_release_artifacts.sh"],
    args = select({
        "@platforms//os:linux": ["$(rlocationpaths {})".format(s) for s in LINUX_ARTIFACTS],
        "@platforms//os:macos": ["$(rlocationpaths {})".format(s) for s in MACOS_ARTIFACTS],
    }),
    data = select({
        "@platforms//os:linux": LINUX_ARTIFACTS,
        "@platforms//os:macos": MACOS_ARTIFACTS,
    }),
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
